# LingAnnotation

./: .gitignore  README.md  create_task_directories.py  mock_data.json  old_db.sqlite3  pyproject.toml  requirements.txt
details/: models.py  urls.py  utils.py  views.py
details/templates/details/: index.html  table_detail.html  upload_table.html
evaluation/: models.py  serializers.py  urls.py  views.py
evaluation/services/: evaluation_service.py
evaluation/templates/evaluation/: index.html  model_config_list.html  result_details.html  task_detail.html
fixtures/: initial_data.json
lingannotation/: settings.py  urls.py
listing/: models.py  urls.py  views.py
listing/fixtures/: initial_data.json
listing/templates/listing/: index.html  task_create.html  update_info.html
templates/: base.html
