[project]
name = "lingannotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7.8"
dependencies = [
    "asgiref==3.7.2",
    "certifi==2025.1.31",
    "chardet==3.0.4",
    "django==3.0.5",
    "django-cors-headers>=3.11.0",
    "djangorestframework>=3.15.1",
    "idna==2.10",
    "openai>=1.39.0",
    "openpyxl>=3.1.3",
    "pandas>=1.3.5",
    "pytz==2025.2",
    "requests==2.23.0",
    "sqlparse==0.4.4",
    "typing-extensions==4.7.1",
    "urllib3==1.25.11",
]
